# wines-agent

./: Dockerfile  README.md  pyproject.toml
data/processed/: wines_table.db
data/processed/chroma_db/: chroma.sqlite3
scripts/: ingests.py
src/: main.py
src/agent/: agent.py  tools.py
src/api/routers/: router.py
src/api/schemas/: schemas.py
